# SkylineBench

./: .gitignore  README.md
.config/: wt.toml
benchmark/: README.md  prompt.md  run.sh
benchmark/experiments/: fix-probe-20260611-103651.jsonl  fix_probe.py  null-control-20260610-161944.jsonl  null-control-congestion-20260611-102221.jsonl  null_control.py
benchmark/maps/: README.md
broker/: Cargo.toml  README.md
broker/examples/: gen_golden.rs
broker/src/: bridge_client.rs  contract.rs  geometry.rs  graph.rs  lib.rs  main.rs  mock.rs  page.rs  render.rs  route.rs  service.rs  timelapse.rs  tools.rs  validate.rs
broker/src/benchmark/: config.rs  congestion.rs  cost.rs  flow_window.rs  measure.rs  mod.rs  persist.rs  plan.rs  record.rs  rolling_window.rs  score.rs  screenshots.rs  server.rs  state.rs  transcript.rs
broker/tests/: broker_e2e.rs
docs/superpowers/: 2026-06-09-phase2-context.md
docs/superpowers/plans/: 2026-06-08-skylinebench-broker.md  2026-06-09-skylinebench-harness-fixes.md  2026-06-09-skylinebench-mod-2a-foundation.md  2026-06-10-skylinebench-trace-route.md  (+12 more)
mod/: DISCOVERY.md  README.md  SkylineBenchMod.csproj  build.sh
mod/src/: Mod.cs
mod/test/: DirectionTests.cs  HttpQueryTests.cs  JsonReaderTests.cs  JsonWriterTests.cs  RequestParseTests.cs  SerializeTests.cs  TestRunner.cs  Tests.csproj
website/: colors_and_type.css  index.html  learnings-draft.md  runs.css  styles.css
website/runs/: fable-5.html  haiku-4-5.html  opus-4-8.html  sonnet-4-5.html
website/runs-src/: fable-5.toml  haiku-4-5.toml  opus-4-8.toml  sonnet-4-5.toml
(+30 files in other folders)
