[package]
name = "skylinebench"
version = "0.1.0"
edition = "2021"

[lib]
name = "skylinebench"
path = "src/lib.rs"

[[bin]]
name = "skylinebench"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tiny-skia = "0.11"
rmcp = { version = "1.7", features = ["server", "transport-io"] }
schemars = "1"
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
